--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,8 +59,10 @@ spring:
       # 连接池最大阻塞等待时间（使用负值表示没有限制）
       max-wait: 60000
   #mysql数据源配置
-
-
-
-
+  datasource:
+    url: jdbc:mysql://192.168.88.128:3306/solrdb?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
+    username: root
+    password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
 
