web请求AOP统一日志

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
+        <!-- aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!-- springboot集成 mongodb -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
