web请求AOP统一日志

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,4 +65,4 @@ spring:
     password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-
+    initialize: true
