--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,9 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <!-- 版本号 -->
         <java-version>1.8</java-version>
-        <jasypt>1.8</jasypt>
-        <mybatis-spring-boot>1.3.1</mybatis-spring-boot>
-        <druid>1.1.6</druid>
-        <mysql-jdbc-version>5.1.38</mysql-jdbc-version>
+        <jasypt-spring-boot-starter>1.8</jasypt-spring-boot-starter>
+        <mybatis-spring-boot-starter>1.3.1</mybatis-spring-boot-starter>
+        <druid-spring-boot-starter>1.1.9</druid-spring-boot-starter>
     </properties>
 
     <dependencies>
@@ -78,25 +77,24 @@
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
             <artifactId>jasypt-spring-boot-starter</artifactId>
-            <version>${jasypt}</version>
+            <version>${jasypt-spring-boot-starter}</version>
         </dependency>
         <!-- springboot集成 mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-spring-boot}</version>
+            <version>${mybatis-spring-boot-starter}</version>
         </dependency>
         <!-- druid数据库连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>${druid}</version>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>${druid-spring-boot-starter}</version>
         </dependency>
         <!-- mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-jdbc-version}</version>
         </dependency>
 
 
