--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,11 +58,37 @@ spring:
       min-idle: 1
       # 连接池最大阻塞等待时间（使用负值表示没有限制）
       max-wait: 60000
-  #mysql数据源配置
+  #数据源配置
   datasource:
-    url: jdbc:mysql://192.168.88.128:3306/solrdb?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false
-    username: root
-    password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
-    driver-class-name: com.mysql.jdbc.Driver
-    type: com.alibaba.druid.pool.DruidDataSource
-    initialize: true
+    #mysql+druid数据库连接池
+    druid:
+      #name: 如果存在多数据源，监控的时候区分 如果不设置 默认DataSource-" + System.identityHashCode(this)
+      #mysql数据源配置
+      url: jdbc:mysql://192.168.88.128:3306/solrdb?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&useSSL=false
+      username: root
+      password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+      driver-class-name: com.mysql.jdbc.Driver
+      db-type: mysql
+      #druid连接池配置
+      #初始化时建立物理连接的个数。初始化发生在显示调用init方法，或者第一次getConnection时
+      initial-size: 1
+      #最小连接池数量
+      min-idle: 1
+      #最大连接池数量
+      max-active: 3
+      #获取连接时最大等待时间，单位毫秒。配置了maxWait之后，缺省启用公平锁，并发效率会有所下降，如果需要可以通过配置useUnfairLock属性为true使用非公平锁。
+      max-wait: 60000
+      #是否缓存preparedStatement，也就是PSCache。PSCache对支持游标的数据库性能提升巨大，比如说oracle。在mysql下建议关闭。
+      pool-prepared-statements: false
+      #建议配置为true，不影响性能，并且保证安全性。申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
+      test-while-idle: true
+mybatis:
+  configuration:
+    #记录到日志
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+    #控制台输出sql
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  #mybatis 别名
+  type-aliases-package: com.bonc.entity
+  #mapper xml 扫描
+  mapper-locations: classpath:com/bonc/mapper/*Mapper.xml
