--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 jasypt:
   encryptor:
     password: hellojasypt
-#tomcat 端口
+#tomcat 配置
 server:
   port: 8088
   tomcat:
@@ -13,7 +13,7 @@ server:
 
 #核心Logger（包含嵌入式容器、hibernate、spring）会输出更多内容，
 #但是你自己应用的日志并不会输出为DEBUG级别
-debug: true
+#debug: true
 
 spring:
   #热部署生效
@@ -24,6 +24,28 @@ spring:
   jackson:
     date-format: "yyyy-MM-dd HH:mm:ss"
     time-zone: "GMT+8"
+  #redis 数据源配置
+  redis:
+    # Redis服务器地址
+    host: 192.168.88.128
+    # Redis数据库索引（默认为0）
+    database: 0
+    # Redis服务器连接端口
+    port: 6379
+    # Redis服务器连接密码（默认为空）
+    password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+    # 连接超时时间（毫秒）
+    timeout: 60000
+    #连接池
+    pool:
+      # 连接池最大连接数（使用负值表示没有限制）
+      max-active: 3
+      # 连接池中的最大空闲连接
+      max-idle: 1
+      # 连接池中的最小空闲连接
+      min-idle: 1
+      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+      max-wait: 60000
   data:
     #mongodb数据源配置
     mongodb:
@@ -37,27 +59,10 @@ spring:
       host: http://192.168.88.128:8983/solr
       repositories:
         enabled: true
-  #redis 数据源配置
-  redis:
-    # Redis服务器地址
-    host: 192.168.88.128
-    # Redis数据库索引（默认为0）
-    database: 0
-    # Redis服务器连接端口
-    port: 6379
-    # Redis服务器连接密码（默认为空）
-    password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
-    # 连接超时时间（毫秒）
-    timeout: 60000
-    pool:
-      # 连接池最大连接数（使用负值表示没有限制）
-      max-active: 8
-      # 连接池中的最大空闲连接
-      max-idle: 8
-      # 连接池中的最小空闲连接
-      min-idle: 1
-      # 连接池最大阻塞等待时间（使用负值表示没有限制）
-      max-wait: 60000
+    #redis数据源配置
+    redis:
+      repositories:
+        enabled: true
   #数据源配置
   datasource:
     #mysql+druid数据库连接池
@@ -94,6 +99,7 @@ spring:
         stat:
           merge-sql: true
           slow-sql-millis: 5000
+
 #mybatis配置
 mybatis:
   configuration:
