--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <jasypt-spring-boot-starter>1.8</jasypt-spring-boot-starter>
         <mybatis-spring-boot-starter>1.3.1</mybatis-spring-boot-starter>
         <druid-spring-boot-starter>1.1.9</druid-spring-boot-starter>
+        <lombok-version>1.16.18</lombok-version>
+        <fastjson-version>1.2.7</fastjson-version>
     </properties>
 
     <dependencies>
@@ -96,6 +98,19 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- com.alibaba.fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson-version}</version>
+        </dependency>
 
 
     </dependencies>
@@ -108,6 +123,7 @@
                 <configuration>
                     <source>${java-version}</source>
                     <target>${java-version}</target>
+                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
             <!-- 配置spring boot maven构建插件 -->
@@ -125,12 +141,12 @@
 
         <resources>
             <!-- 打包编译项目时 src下的xml也编译到target目录 -->
-            <resource>
+            <!--<resource>
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
                 </includes>
-            </resource>
+            </resource>-->
             <!-- 打包编译项目时 resources目录下的所有文件也编译到 target目录 -->
             <resource>
                 <directory>src/main/resources</directory>
