--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,10 +20,10 @@ spring:
   devtools:
     restart:
       enabled: true
-  #时间戳统一转换
-  jackson:
-    date-format: "yyyy-MM-dd HH:mm:ss"
-    time-zone: "GMT+8"
+#  时间戳统一转换
+#  jackson:
+#    date-format: "yyyy-MM-dd HH:mm:ss"
+#    time-zone: "GMT+8"
   #redis 数据源配置
   redis:
     # Redis服务器地址
@@ -110,4 +110,4 @@ mybatis:
   #mybatis 别名
   type-aliases-package: com.bonc.entity
   #mapper xml 扫描
-  mapper-locations: classpath:com/bonc/mapper/*Mapper.xml
+  mapper-locations: mapper/*Mapper.xml
