--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <druid-spring-boot-starter>1.1.9</druid-spring-boot-starter>
         <lombok-version>1.16.18</lombok-version>
         <fastjson-version>1.2.7</fastjson-version>
+        <mybatis-pagehelper-version>1.2.3</mybatis-pagehelper-version>
     </properties>
 
     <dependencies>
@@ -87,6 +88,20 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis-spring-boot-starter}</version>
         </dependency>
+        <!-- Mybatis Generator -->
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.2</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <!--pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${mybatis-pagehelper-version}</version>
+        </dependency>
         <!-- druid数据库连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -136,6 +151,31 @@
                     <!-- 主入口 -->
                     <mainClass>com.bonc.Application</mainClass>
                 </configuration>
+            </plugin>
+            <!-- mybatis generator -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.6</version>
+                <configuration>
+                    <!-- generator 工具配置文件的位置 -->
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.44</version>
+                    </dependency>
+                    <!-- Mybatis Generator -->
+                    <dependency>
+                        <groupId>org.mybatis.generator</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.3.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
 
