mybatis 通用mapper 单表 generator

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -111,7 +111,7 @@ mybatis:
   #mybatis 别名
   type-aliases-package: com.bonc.entity
   #mapper xml 扫描
-  mapper-locations: mapper*/*Mapper.xml
+  mapper-locations: mapper_tk/*Mapper.xml
 
 #pagehepler
 pagehelper:
