--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
+        <!-- mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.2.4</version>
+        </dependency>
         <!--pagehelper-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -159,7 +165,7 @@
                 <version>1.3.6</version>
                 <configuration>
                     <!-- generator 工具配置文件的位置 -->
-                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    <configurationFile>src/main/resources/generatorConfig_tk.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
@@ -170,10 +176,16 @@
                         <version>5.1.44</version>
                     </dependency>
                     <!-- Mybatis Generator -->
+                    <!--<dependency>-->
+                        <!--<groupId>org.mybatis.generator</groupId>-->
+                        <!--<artifactId>mybatis-generator-core</artifactId>-->
+                        <!--<version>1.3.2</version>-->
+                    <!--</dependency>-->
+                    <!-- mapper -->
                     <dependency>
-                        <groupId>org.mybatis.generator</groupId>
-                        <artifactId>mybatis-generator-core</artifactId>
-                        <version>1.3.2</version>
+                        <groupId>tk.mybatis</groupId>
+                        <artifactId>mapper</artifactId>
+                        <version>3.5.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
