--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+            <optional>true</optional>
         </dependency>
         <!-- springboot集成 mongodb -->
         <dependency>
