多数据源入门

--- a/src/main/resources/mybatisGeneratorinit.properties
+++ b/src/main/resources/mybatisGeneratorinit.properties
@@ -1,9 +1,9 @@
 #Mybatis Generator configuration
-#dao类和实体类的位置
+#dao\u7C7B\u548C\u5B9E\u4F53\u7C7B\u7684\u4F4D\u7F6E
 project =src/main/java
-#mapper文件的位置
+#mapper\u6587\u4EF6\u7684\u4F4D\u7F6E
 resources=src/main/resources
-#根据数据库中的表生成对应的pojo类、dao、mapper
+#\u6839\u636E\u6570\u636E\u5E93\u4E2D\u7684\u8868\u751F\u6210\u5BF9\u5E94\u7684pojo\u7C7B\u3001dao\u3001mapper_solr
 jdbc_driver =com.mysql.jdbc.Driver
 jdbc_url=jdbc:mysql://192.168.88.128:3306/mmall?useUnicode=true&characterEncoding=utf-8&useSSL=false
 jdbc_user=root
