--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-        <!-- mapper -->
+        <!-- mapper_solr -->
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
@@ -182,7 +182,7 @@
                         <!--<artifactId>mybatis-generator-core</artifactId>-->
                         <!--<version>1.3.2</version>-->
                     <!--</dependency>-->
-                    <!-- mapper -->
+                    <!-- mapper_solr -->
                     <dependency>
                         <groupId>tk.mybatis</groupId>
                         <artifactId>mapper</artifactId>
