--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,14 +19,13 @@ banner:
   charset: UTF-8
 
 spring:
-
   http:
-      encoding:
-        charset: UTF-8
-        enabled: true
-        force: true
-    messages:
-      encoding: UTF-8
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+  messages:
+    encoding: UTF-8
 
   #热部署生效
   devtools:
@@ -77,11 +76,24 @@ spring:
         enabled: true
   #数据源配置
   datasource:
+    #master-mysql数据源配置
+    master:
+      url: jdbc:mysql://192.168.88.128:3306/mmall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false
+      username: root
+      password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+      driver-class-name: com.mysql.jdbc.Driver
+      masterMapperLocation: classpath:mapper/*Mapper.xml
+    #cluster-mysql数据源配置
+    cluster:
+      url: jdbc:mysql://192.168.88.128:3306/solrdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false
+      username: root
+      password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+      driver-class-name: com.mysql.jdbc.Driver
+      masterMapperLocation: classpath:mapper_solr/*Mapper.xml
     #mysql+druid数据库连接池
     druid:
       #name: 如果存在多数据源，监控的时候区分 如果不设置 默认DataSource-" + System.identityHashCode(this)
       name: DataSource-SpringBootDemo
-      #mysql数据源配置
       url: jdbc:mysql://192.168.88.128:3306/mmall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false
       username: root
       password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
@@ -99,8 +111,8 @@ spring:
       #获取连接时最大等待时间，单位毫秒。配置了maxWait之后，缺省启用公平锁，并发效率会有所下降，如果需要可以通过配置useUnfairLock属性为true使用非公平锁。
       max-wait: 60000
       #是否缓存preparedStatement，也就是PSCache。PSCache对支持游标的数据库性能提升巨大，比如说oracle。在mysql下建议关闭。
-      pool-prepared-statements: true
-      max-pool-prepared-statement-per-connection-size: 20
+      #pool-prepared-statements: true
+      #max-pool-prepared-statement-per-connection-size: 20
       #建议配置为true，不影响性能，并且保证安全性。申请连接的时候检测，如果空闲时间大于timeBetweenEvictionRunsMillis，执行validationQuery检测连接是否有效。
       test-while-idle: true
       test-on-borrow: false
@@ -114,19 +126,33 @@ spring:
           merge-sql: true
           slow-sql-millis: 5000
 
-
 #mybatis配置
 mybatis:
   configuration:
     #记录到日志
     log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+    #开启驼峰转换
     map-underscore-to-camel-case: true
+    #使全局的映射器启用或禁用缓存
+    cache-enabled: true
+    #全局启用或禁用延迟加载。当禁用时，所有关联对象都会即时加载
+    lazy-loading-enabled: true
+    #当启用时，有延迟加载属性的对象在被调用时将会完全加载任意属性。否则，每种属性将会按需要加载
+    aggressive-lazy-loading: true
+    #允许JDBC 生成主键。需要驱动器支持
+    use-generated-keys: true
+    #指定 MyBatis 如何自动映射 数据基表的列 NONE：不隐射　PARTIAL:部分  FULL:全部
+    auto-mapping-behavior: partial
+    #这是默认的执行类型（SIMPLE: 简单； REUSE: 执行器可能重复使用prepared statements语句；BATCH: 执行器可以重复执行语句和批量更新)
+    default-executor-type: simple
+
     #控制台输出sql
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   #mybatis 别名
   type-aliases-package: com.bonc.entity
-  #mapper xml 扫描
-  mapper-locations: mapper_/*Mapper.xml
+  #mapper_solr xml 扫描
+  mapper-locations: mapper*/*Mapper.xml
+
 
 #pagehepler
 pagehelper:
