--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <lombok-version>1.16.18</lombok-version>
         <fastjson-version>1.2.7</fastjson-version>
         <mybatis-pagehelper-version>1.2.3</mybatis-pagehelper-version>
+        <common-codec-version>1.6</common-codec-version>
     </properties>
 
     <dependencies>
@@ -97,12 +98,6 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-        <!-- mapper_solr -->
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>1.2.4</version>
-        </dependency>
         <!--pagehelper-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -125,7 +120,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok-version}</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <!-- com.alibaba.fastjson -->
         <dependency>
@@ -133,11 +128,11 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson-version}</version>
         </dependency>
+        <!-- solr安全认证后java客户端访问增加依赖commons-codec -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${common-codec-version}</version>
         </dependency>
 
 
@@ -172,7 +167,7 @@
                 <version>1.3.6</version>
                 <configuration>
                     <!-- generator 工具配置文件的位置 -->
-                    <configurationFile>src/main/resources/generatorConfig_tk.xml</configurationFile>
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
@@ -183,16 +178,10 @@
                         <version>5.1.44</version>
                     </dependency>
                     <!-- Mybatis Generator -->
-                    <!--<dependency>-->
-                        <!--<groupId>org.mybatis.generator</groupId>-->
-                        <!--<artifactId>mybatis-generator-core</artifactId>-->
-                        <!--<version>1.3.2</version>-->
-                    <!--</dependency>-->
-                    <!-- mapper_solr -->
                     <dependency>
-                        <groupId>tk.mybatis</groupId>
-                        <artifactId>mapper</artifactId>
-                        <version>3.5.3</version>
+                        <groupId>org.mybatis.generator</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.3.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
