--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -142,6 +142,12 @@ spring:
           merge-sql: true
           slow-sql-millis: 5000
 
+  #thymeleaf模板
+  thymeleaf:
+#    启用模板缓存
+    cache: false
+
+
 #mybatis配置
 mybatis:
   configuration:
@@ -176,5 +182,4 @@ pagehelper:
   reasonable: "true"
   support-methods-arguments: "true"
   params: count=countSql
-
 
