--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@
 jasypt:
   encryptor:
     password: hellojasypt
+
+#MD5加密盐值
+MD5:
+  salt: hellojasypt
+
 #tomcat 配置
 server:
   port: 8088
@@ -15,6 +20,13 @@ server:
 #但是你自己应用的日志并不会输出为DEBUG级别
 #debug: true
 
+#FTP服务器设置
+ftp:
+  host: 192.168.88.129
+  username: ftpuser
+  password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
+  prefix: ftp://192.168.88.129/images/
+
 banner:
   charset: UTF-8
 
@@ -24,6 +36,12 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+    #文件上传
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   messages:
     encoding: UTF-8
 
@@ -146,6 +164,7 @@ spring:
   thymeleaf:
 #    启用模板缓存
     cache: false
+
 
 
 #mybatis配置
