--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- springboot实现基于redis的session共享 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
         <!-- springboot集成 solr -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
