--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -113,14 +113,14 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     #master-mysql数据源配置
     master:
-      url: jdbc:mysql://192.168.88.129:3306/mmall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false
+      url: jdbc:mysql://192.168.88.129:3306/mmall?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&useSSL=false
       username: root
       password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
       driver-class-name: com.mysql.jdbc.Driver
       masterMapperLocations: classpath:mapper/*Mapper.xml
     #cluster-mysql数据源配置
     cluster:
-      url: jdbc:mysql://192.168.88.129:3306/solrdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&failOverReadOnly=false&useSSL=false
+      url: jdbc:mysql://192.168.88.129:3306/solrdb?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&useSSL=false
       username: root
       password: ENC(356IXRJuIUZGToRMUG375+pm5hnmyqM4)
       driver-class-name: com.mysql.jdbc.Driver
@@ -202,4 +202,3 @@ pagehelper:
   reasonable: "true"
   support-methods-arguments: "true"
   params: count=countSql
-
