yml配置文件实现session共享或者代码实现 RedisHttpSessionConfig.java //@Configuration //@EnableRedisHttpSession(redisNamespace = "springboot-session-redis")//开启spring session支持

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -166,7 +166,11 @@ spring:
 #    启用模板缓存
     cache: false
 
-
+#  redis实现spring session共享
+  session:
+    store-type: redis
+    redis:
+      namespace: springboot-session-redis
 
 #mybatis配置
 mybatis:
