springboot支持rabbitmq 一对一、一对多、多对多、发送和接收对象

--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
             <artifactId>google-collections</artifactId>
             <version>${google-collections-version}</version>
         </dependency>
+        <!-- springboot集成RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
     </dependencies>
 
